--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -46,7 +46,7 @@
 
     <div #titulo2>
       <ion-title class="ion-text-left ion-text">
-        Identificación asistencia
+        Identificación de asistencia
       </ion-title>
     </div>
 
