--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -58,6 +58,10 @@
         <br>
         <a routerLink="/pass">Si olvidaste tu contraseña, haz clicl aqui</a>
       </ion-label>
+      <ion-label>
+        <br>
+        <a routerLink="/formulario">Eres nuevo en DuocUC ?, haz clicl aqui</a>
+      </ion-label>
     </ion-card>
   </div>
 
