--- a/src/app/pages/camara/camara.page.html
+++ b/src/app/pages/camara/camara.page.html
@@ -44,6 +44,9 @@
     </ion-card-content>
   </ion-card>
   <div class="ion-padding-top ion-text-center">
+    <ion-button [routerLink]="['/camera']">Escanear codigo QR</ion-button>
+  </div>
+  <div class="ion-padding-top ion-text-center">
     <ion-button [routerLink]="['/home']">Volver</ion-button>
   </div>
 </ion-content>
