--- a/src/app/pages/pass/pass.page.html
+++ b/src/app/pages/pass/pass.page.html
@@ -26,7 +26,8 @@
 
       <ion-card-content>
         <ion-item >
-          <ion-label position="floating" #titulo3 >Ingrese su nombre de usuario</ion-label>
+          <ion-label position="floating" #titulo3 >Ingrese el segundo</ion-label>
+          <ion-label position="floating" #ti4 >apellido de su madre</ion-label>
 
           <ion-input type="text" [(ngModel)]="usuario.nombreUsuario"></ion-input>
         </ion-item>
