--- a/src/app/components/datos-basicos/datos-basicos.component.html
+++ b/src/app/components/datos-basicos/datos-basicos.component.html
@@ -13,6 +13,10 @@
   </ion-title>
   <b class="ion-text-center">
     <h4>Llene el formulario</h4>
+    <div class="ion-padding-top ion-text-center">
+      <img src='assets/icon/Pers.jpeg' style='width: 35% ; border: 2px solid black'>
+      </div>
+
   </b>
   <ion-item class="ion-padding-horizontal">
     <ion-label position="stacked">RUT sin puntos ni guion paciente</ion-label>
