JUSTO ANTES DE LA BASE DE DATOS

--- a/src/app/components/datos-basicos/datos-basicos.component.html
+++ b/src/app/components/datos-basicos/datos-basicos.component.html
@@ -48,7 +48,7 @@
         </ion-button>
       </ion-col>
       <ion-col col-6>
-        <ion-button shape="block" (click)=" mostrar()">
+        <ion-button shape="block" (click)="guardarPost()">
           Mostrar
         </ion-button>
       </ion-col>
