--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -56,7 +56,7 @@
 
       <ion-label>
         <br>
-        <a routerLink="/pass">Si olvidaste tu contraseña, haz clicl aqui</a>
+        <a routerLink="/dvus">Si olvidaste tu contraseña, haz clicl aqui</a>
       </ion-label>
       <ion-label>
         <br>
