--- a/src/app/pages/dvus/dvus.page.html
+++ b/src/app/pages/dvus/dvus.page.html
@@ -61,7 +61,7 @@
 <ion-footer>
   <ion-toolbar color="primary">
     <ion-title class="ion-text-left ion-text">
-      IdentificaciÃ³n de usuario
+      Identificacion de usuario
     </ion-title>
 
   </ion-toolbar>
