--- a/src/app/pages/dvus/dvus.page.html
+++ b/src/app/pages/dvus/dvus.page.html
@@ -8,7 +8,7 @@
 
   <ion-title class="ion-padding-top ion-text-center">
     <ion-label>
-      <h1>Quien inetenta restablcer clave ?</h1>
+      <h1>Quien intenta restablecer clave ?</h1>
 
     </ion-label>
   </ion-title>
@@ -26,7 +26,7 @@
 
       <ion-card-content>
         <ion-item >
-          <ion-label position="floating" #titulo3 >Inrege su usuario</ion-label>
+          <ion-label position="floating" #titulo3 >Ingrese su usuario</ion-label>
 
 
           <ion-input type="text" [(ngModel)]="validacionUs.nombreUsuario"></ion-input>
